# Vendor-Management

./: .dockerignore  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.yml  pyproject.toml
accounts/: models.py  views.py
accounts/auth/: authentication.py  helpers.py
accounts/migrations/: 0001_initial.py  0002_tokenmanager_valid_upto.py
accounts/permissions/: auth_permissions.py
core/: manage.py
core/core/utils/: background_tasks.py  collections.py  misc.py  settings.py  tokens.py
core/main/: urls.py  wsgi.py
core/main/settings/: __init__.py  base.py  custom.py  envvars.py  logging.py  rest_framework.py
core/main/settings/templates/: settings.dev.py
purchase_order/: models.py  views.py
purchase_order/migrations/: 0001_initial.py  0002_purchaseorder_completed_at.py
purchase_order/serializers/: __init__.py  po_serializer.py
purchase_order/utils/: __init__.py  aggregations.py  misc.py
scripts/: entrypoint.sh
tests/: test_api.py  test_model.py
