[tool.poetry]
name = "vendor-management"
version = "0.1.1"
description = ""
authors = ["SimbaOG <amritanshrandeo@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.2"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
